--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
                     </form>
                 </section>
                 <section class="show-book">
-                    <div id="book-shelf">
 
-                    </div>
+                    <fieldset id="has-read">
+                        <legend>Sudah dibaca</legend>
+                    </fieldset>
+
+                    <fieldset id="unread" style="margin-top:10px;">
+                        <legend>Belum dibaca</legend>
+                    </fieldset>
                 </section>
             </div>
         </main>
